> - text-based commands (used out of <#977267452050280498>) will now auto-delete the alert and the command message


## <:happ:906683365791502366> bugs ~~foxed~~ fixed~

### /currency
> - fixed <:area_communities_bot:1135719948224843856> </currency shop:1116857516324827148> ➡️ **💸 Flea market** not loading when there's 25 items listed
>  - the flea market will now hold 24 items max

### /votekick
> - fixed already timed out users and bot users being able to be <:area_communities_bot:1135719948224843856> </votekick:1116857516324827152>ed


## <@490178047325110282>'s notes

### you can now use more commands out of <#977267452050280498>
> - the list of commands that *can* be used out of <#977267452050280498> is now..
>  - <:area_communities_bot:1135719948224843856> </create-event:1132730748370174043>
>  - <:area_communities_bot:1135719948224843856> </get-map-info:1148872290990301286>
>  - <:area_communities_bot:1135719948224843856> </get-part-info:1148872290990301287>
>  - <:area_communities_bot:1135719948224843856> </jump-to-top:1119768647355859026>
>  - <:area_communities_bot:1135719948224843856> </mention:1116857516324827149>
>  - <:area_communities_bot:1135719948224843856> </votekick:1116857516324827152>
> - the way command permissions are checked (aka: if you can use a command out of <#977267452050280498>) will be improved soon™️



------------
==============
==============
------------
12/aug/2023



# https://discord.com/channels/977254354589462618/987047618918105118


## <:happ:906683365791502366> new stuffs!!

### bunny what did you do to votekicks
> - revered the changes to <:area_communities_bot:1135719948224843856> </votekick:1116857516324827152> and @​/votekick Protection
>  - formatting remains the same
>  - the role now costs 🪙 500 coins (from 🪙 100 coins)
>  - you now only need <a:shield:921777486172405823> `Level 5` to buy the role
>  - you will always get @mentioned for failed votekicks
>  - people who got their 🪙 1,000 coins can keep them